--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     flex-direction: column;
     color: #f1f1f1;
     box-shadow: 0 4px 8px 1px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease-in-out;
 }
 
 .in-round {
